# voice-assistant

./: .SRCINFO  .SRCINFO.template  .gitignore  AUR.md  AUR_FILES_SUMMARY.md  AUR_PACKAGING.md  AUR_README.md  CLEANUP_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  MIGRATION_CHECKLIST.md  PKGBUILD  PKGBUILD-git  QUICKSTART_AUR.md  README.md  REBRANDING_SUMMARY.md  SMART_WORKFLOWS.md  SMART_WORKFLOWS_QUICKSTART.md  SRCINFO_HOWTO.md  TESTING_GUIDE.md  branding.json  build-aur.sh  build.sh  cleanup.sh  command-mode.py  command_executor.sh  command_popup_kivy.py  commands_config.json  complete-migration.sh  config.json  config_gui.py  config_manager.py  context.json  debug_tool.py  download-model.sh  gnome-assistant.install  gui.py  install.sh  (+19 more)
.github/: copilot-instructions.md
dbus/: com.github.saim.GnomeAssistant.service.in  com.github.saim.GnomeAssistant.xml  com.github.saim.VoiceAssistant.service.in  com.github.saim.VoiceAssistant.xml  com.github.saim.Willow.service.in  com.github.saim.Willow.xml
docs/: GPU_ACCELERATION.md
gnome-extension/: README.md  install.sh  uninstall.sh
gnome-extension/gnome-assistant@saim/: extension.js  metadata.json  prefs.js
gnome-extension/gnome-assistant@saim/lib/: ConfigManager.js  KeyCommandBuilder.js  LogViewer.js  PreferencesWidgets.js  WhisperModelManager.js
gnome-extension/gnome-assistant@saim/schemas/: org.gnome.shell.extensions.gnome-assistant.gschema.xml
gnome-extension/voice-assistant@saim/: extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/voice-assistant@saim/lib/: CommandEditor.js  ConfigManager.js  PreferencesWidgets.js  WhisperModelManager.js
gnome-extension/voice-assistant@saim/schemas/: gschemas.compiled  org.gnome.shell.extensions.voice-assistant.gschema.xml
gnome-extension/willow@saim/: extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/willow@saim/lib/: ConfigManager.js  LogViewer.js  PreferencesWidgets.js  WhisperModelManager.js
gnome-extension/willow@saim/schemas/: org.gnome.shell.extensions.willow.gschema.xml
service/: CMakeLists.txt
service/src/: CommandExecutor.cpp  CommandExecutor.hpp  ModeWorkers.cpp  ModeWorkers.hpp  SpeechSegmenter.cpp  SpeechSegmenter.hpp  VoiceAssistantService.cpp  VoiceAssistantService.hpp  main.cpp
systemd/: gnome-assistant.service  voice-assistant.service  willow.service
